Changed HTML frontend to have cards for all products instead of rows

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 </html>
 
           
-<template id="product-row">
+<!-- <template id="product-row">
   <div class="row">
     <div class="col">
       Breed
@@ -119,4 +119,18 @@
     </div>
   </div>
 </template>
+ -->
 
+ <template id="product-row">
+  <div class="col-md-4">
+    <div class="card mb-5">
+      <img class="card-img-top" src="http://www.frenchbulldogbreed.net/files/French-bulldog-puppy-for-sale-Teddy-02.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h4 class="card-title">French Bulldog</h4>
+        <p class="card-text">Cost: $2,000 </p>
+        <p class="card-text">Description: Gorgeous 10-week old grey frenchie, ready for a new home!</p>
+        <a href="#" class="btn btn-primary">More info</a>
+      </div>
+    </div>
+  </div>
+</template>
