--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="mini-capstone.css">
 
     <title>Dalton's Purebreds</title>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="index.js" defer></script>
   </head>
 
@@ -55,9 +57,9 @@
 
   <div class="container">
 
-    <div class="jumbotron">
+    <div class="jumbotron bg-light">
       <h1 class="display-4">Find your new companion...</h1>
-      <p class="lead">With loyal connections to the top breeders in the country, we offer the best quality puppies here at Dalton's Purebred Pups.  See below for all available puppies!</p>
+      <p class="lead">With loyal connections to the top breeders in the country, we offer the best quality puppies here at Dalton's Purebreds.  See below for all available puppies!</p>
       <hr class="my-4">
       <p>Interested in learning more about where your friend comes from:</p>
       <p class="lead">
@@ -65,8 +67,45 @@
       </p>
     </div>
 
-      
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<!-- <style type="text/css">
+.carousel {
+    border-radius: 55px 55px 55px 55px;
+    height: 700px;
+    margin-bottom: 10px;
+    margin-top: 40px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+</style> -->
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://cdn.akc.org/content/hero/puppy-boundaries_header.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://static1.squarespace.com/static/5762a489d1758ead80c014f6/5771283e363d3c3cb2fef38b/5771286f363d3c3cb2fefb0f/1467033929351/?format=1000w" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://cdn.akc.org/content/hero/funnypuppybehaviorsheader.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+    <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="https://www.cesarsway.com/sites/newcesarsway/files/styles/large_article_preview/public/The-stages-of-puppy-growth.jpg?itok=9ptPJwY8" alt="First slide">
@@ -87,10 +126,10 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
+ -->
     <div class="container">
 
-      <h1>ALL Puppies for Sale</h1>
+      <h1>All Available Puppies</h1>
 
       <div class="row">
         <!-- products go here -->
@@ -105,30 +144,14 @@
   </body>
 </html>
 
-          
-<!-- <template id="product-row">
-  <div class="row">
-    <div class="col">
-      Breed
-    </div>
-    <div class="col">
-      Cost
-    </div>
-    <div class="col-6">
-      Description
-    </div>
-  </div>
-</template>
- -->
-
- <template id="product-row">
+ <template id="product-card">
   <div class="col-md-4">
-    <div class="card mb-5">
+    <div class="card mb-5 bg-light border-dark">
       <img class="card-img-top" src="http://www.frenchbulldogbreed.net/files/French-bulldog-puppy-for-sale-Teddy-02.jpg" alt="Card image cap">
       <div class="card-body">
-        <h4 class="card-title">French Bulldog</h4>
-        <p class="card-text">Cost: $2,000 </p>
-        <p class="card-text">Description: Gorgeous 10-week old grey frenchie, ready for a new home!</p>
+        <h4 class="card-title">Breed goes here</h4>
+        <p class="card-text price">Price goes here </p>
+        <p class="card-text description">Description goes here</p>
         <a href="#" class="btn btn-primary">More info</a>
       </div>
     </div>
