--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <meta charset="UTF-8">
+  <title>My App</title>
+  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="index.js" defer></script>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="mini-capstone.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="mini-capstone.css">
 
-    <title>Dalton's Purebreds</title>
-
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="index.js" defer></script>
-  </head>
+</head>
+<body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Dalton's Purebreds</a>
@@ -53,107 +52,139 @@
     </div>
   </nav>
 
-  <body>
-
   <div class="container">
 
-    <div class="jumbotron bg-light">
-      <h1 class="display-4">Find your new companion...</h1>
-      <p class="lead">With loyal connections to the top breeders in the country, we offer the best quality puppies here at Dalton's Purebreds.  See below for all available puppies!</p>
-      <hr class="my-4">
-      <p>Interested in learning more about where your friend comes from:</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more about our Breeders</a>
-      </p>
-    </div>
+  <div id="vue-app">
+    <a href="/#/sample">Go to a sample page</a>
+    <a href="/#/signup">Signup</a>
+    <a href="/#/login">Login</a>
+    <a href="/#/logout">Logout</a>
 
-<!-- <style type="text/css">
-.carousel {
-    border-radius: 55px 55px 55px 55px;
-    height: 700px;
-    margin-bottom: 10px;
-    margin-top: 40px;
-    margin-left: 0px;
-    margin-right: 0px;
-}
-</style> -->
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="http://cdn.akc.org/content/hero/puppy-boundaries_header.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://static1.squarespace.com/static/5762a489d1758ead80c014f6/5771283e363d3c3cb2fef38b/5771286f363d3c3cb2fefb0f/1467033929351/?format=1000w" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://cdn.akc.org/content/hero/funnypuppybehaviorsheader.jpg" alt="Third slide">
-    </div>
+    <router-view></router-view>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
-    <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://www.cesarsway.com/sites/newcesarsway/files/styles/large_article_preview/public/The-stages-of-puppy-growth.jpg?itok=9ptPJwY8" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzLw33S6-DnnZ9HPf_mN-hmN8-iJST5odciNCteFDk6yYgIhvM" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="http://cdn2-www.dogtime.com/assets/uploads/2016/03/national-puppy-day-2.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
- -->
-    <div class="container">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-      <h1>All Available Puppies</h1>
-
-      <div class="row">
-        <!-- products go here -->
-      </div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
 
- <template id="product-card">
-  <div class="col-md-4">
-    <div class="card mb-5 bg-light border-dark">
-      <img class="card-img-top" src="http://www.frenchbulldogbreed.net/files/French-bulldog-puppy-for-sale-Teddy-02.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h4 class="card-title">Breed goes here</h4>
-        <p class="card-text price">Price goes here </p>
-        <p class="card-text description">Description goes here</p>
-        <a href="#" class="btn btn-primary">More info</a>
+<template id="sample-page">
+  <div class="vue-component">
+    <div class="container">
+      <h1>{{ message }}</h1>
+      <a href="/#/">Go to home page</a>
+      <p>This is a sample page</p>
+    </div>
+  </div>
+</template>
+
+<template id="home-page">
+<div class="vue-component container">
+  <div class="jumbotron bg-light">
+    <h1 class="display-4">Find your new companion...</h1>
+    <p class="lead">With loyal connections to the top breeders in the country, we offer the best quality puppies here at Dalton's Purebreds.  See below for all available puppies!</p>
+    <hr class="my-4">
+    <p>Interested in learning more about where your friend comes from:</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more about our Breeders</a>
+    </p>
+  </div>
+
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="http://cdn.akc.org/content/hero/puppy-boundaries_header.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="http://static1.squarespace.com/static/5762a489d1758ead80c014f6/5771283e363d3c3cb2fef38b/5771286f363d3c3cb2fefb0f/1467033929351/?format=1000w" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="http://cdn.akc.org/content/hero/funnypuppybehaviorsheader.jpg" alt="Third slide">
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <div class="row">
+    <div v-for="product in products" class="col-md-4">
+      <div class="card mb-5 bg-light border-dark">
+        <img class="card-img-top" src="http://www.frenchbulldogbreed.net/files/French-bulldog-puppy-for-sale-Teddy-02.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">{{ product.name }}</h4>
+          <p class="card-text price">{{ product.price }}</p>
+          <p class="card-text description">{{ product.description }}</p>
+          <a href="#" class="btn btn-primary">More info</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</template>
+
+</div>
+
+<template id="signup-page">
+  <div class="vue-component">
+
+    <div class="container">
+      <h1>Signup</h1>
+      <ul>
+        <li class="text-danger" v-for="error in errors">{{ error }}</li>
+      </ul>
+      <div class="form-group">
+        <label>Name:</label> 
+        <input type="text" class="form-control" v-model="name">
+      </div>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="email" class="form-control" v-model="email">
+      </div>
+      <div class="form-group">
+        <label>Password:</label>
+        <input type="password" class="form-control" v-model="password">
+      </div>
+      <div class="form-group">
+        <label>Password confirmation:</label>
+        <input type="password" class="form-control" v-model="passwordConfirmation">
+      </div>
+      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+    </div>
+  </div>
+</template>
+
+<template id="login-page">
+  <div class="vue-component">
+
+    <div class="container">
+      <h1>Login</h1>
+      <ul>
+        <li class="text-danger" v-for="error in errors">{{ error }}</li>
+      </ul>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="email" class="form-control" v-model="email">
+      </div>
+      <div class="form-group">
+        <label>Password:</label>
+        <input type="password" class="form-control" v-model="password">
+      </div>
+      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+    </div>
+
   </div>
 </template>
