--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="mini-capstone.css">
 
+  <style>
+    .products-row {
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
 
@@ -92,8 +97,7 @@
     </p>
   </div>
 
-
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -120,7 +124,7 @@
     </a>
   </div>
 
-  <div class="row">
+  <div class="row products-row">
     <div v-for="product in products" class="col-md-4">
       <div class="card mb-5 bg-light border-dark">
         <img class="card-img-top" v-bind:src="product.image" alt="Card image cap">
@@ -182,6 +186,32 @@
       <div class="form-group">
         <label>Password:</label>
         <input type="password" class="form-control" v-model="password">
+      </div>
+      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+    </div>
+
+  </div>
+</template>
+
+<template id="products-new-page">
+  <div class="vue-component">
+
+    <div class="container">
+      <h1>New Product</h1>
+      <ul>
+        <li class="text-danger" v-for="error in errors">{{ error }}</li>
+      </ul>
+      <div class="form-group">
+        <label>Breed:</label>
+        <input type="text" class="form-control" v-model="name">
+      </div>
+      <div class="form-group">
+        <label>Price:</label>
+        <input type="text" class="form-control" v-model="price">
+      </div>
+      <div class="form-group">
+        <label>Description:</label>
+        <input type="text" class="form-control" v-model="description">
       </div>
       <button class="btn btn-primary" v-on:click="submit()">Submit</button>
     </div>
