added second search filter for keyword on index page

--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,7 @@
     </div>
 
     <input type="text" v-model="nameFilter" placeholder="Search by Breed">
-<!--     <input type="text" v-model="keywordFilter" placeholder="Search by Keyword"> -->
+    <input type="text" v-model="keywordFilter" placeholder="Search by Keyword">
 
     <div class="row products-row">
       <div v-for="product in products" class="col-md-4" v-if="isValidProduct(product)">
