--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js">
+    </script>
   <script src="index.js" defer></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -15,6 +17,9 @@
     .products-row {
       margin-top: 50px;
     }
+    #map {
+    height: 300px;
+  }
   </style>
 </head>
 <body>
@@ -124,6 +129,11 @@
       <span class="sr-only">Next</span>
     </a>
     </div>
+
+    <br>
+
+    <div id="map"></div>
+
 </template>
 
 <template id="signup-page">
